Set z-index of fixed nav

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -19,6 +19,7 @@
 
   &__nav {
     position: fixed;
+    z-index: 9;
     width: 100%;
     position: fixed;
     padding: 4rem 0;
